:fire: fix in text alignment

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -30,7 +30,7 @@
 .row.previewed{
   padding: 2em 1em;
   background: rgba(0,0,0,0.2);
-  text-align: justify;
+  text-align: left;
 }
 .ic{
   color: #000;
@@ -48,6 +48,7 @@ body {
   margin: 0;
   font-size: 16px;
   overflow-x: hidden;
+  text-align: left;
 }
 .blanco {
   color: #ffffff;
@@ -69,6 +70,7 @@ body {
 
 p{
   font-family: 'Open Sans';
+  text-align: left !important;
 }
 .collapsible-header strong{
   text-transform: uppercase;
